Fix size of poster flairs
Prevents them from growing too large, and lets them shrink when needed

--- a/src/sass/layouts/_home.scss
+++ b/src/sass/layouts/_home.scss
@@ -4,12 +4,22 @@
   display: grid;
   grid-gap: 0;
   grid-template-columns: #{$width} 0.5fr #{$width} 0.5fr #{$width} 1fr #{$width};
-  grid-template-rows: 0.6fr 0.4fr #{$width} 1fr #{$width} 1fr 0.4fr 0.6fr;
+  grid-template-rows: 3.6rem 2.4rem #{$width} auto #{$width} auto 2.4rem 3.6rem;
+
   margin: 5vh auto;
   max-height: 55vh;
   max-width: 700px;
   min-height: 30rem;
   width: 100%;
+
+  @supports (width: clamp(1px, 1vw, 2px)) {
+    grid-template-rows:
+      clamp(2.4rem, 8vw, 3.6rem)
+      clamp(1.6rem, 8vw, 2.4rem)
+      #{$width} auto #{$width} auto
+      clamp(1.6rem, 8vw, 2.4rem)
+      clamp(2.4rem, 8vw, 3.6rem);
+  }
 
   @media (min-width: 618px) {
     width: 80vw;
